Add endpoint to delete user account with all related data
