# internal/api/handlers/handlers.go
@@ -12,6 +12,7 @@ import (
 func AttachAllRoutes(s *api.Server) {
 	// attach our routes
 	s.Router.Routes = []*echo.Route{
+		auth.DeleteUserAccountRoute(s),
 		auth.GetUserInfoRoute(s),
 		auth.PostChangePasswordRoute(s),
 		auth.PostForgotPasswordCompleteRoute(s),
