# internal/types/auth/delete_user_account_route_parameters.go
@@ -1,0 +1,87 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package auth
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/runtime"
+	"github.com/go-openapi/runtime/middleware"
+	"github.com/go-openapi/strfmt"
+
+	"allaboutapps.dev/aw/go-starter/internal/types"
+)
+
+// NewDeleteUserAccountRouteParams creates a new DeleteUserAccountRouteParams object
+// no default values defined in spec.
+func NewDeleteUserAccountRouteParams() DeleteUserAccountRouteParams {
+
+	return DeleteUserAccountRouteParams{}
+}
+
+// DeleteUserAccountRouteParams contains all the bound params for the delete user account route operation
+// typically these are obtained from a http.Request
+//
+// swagger:parameters DeleteUserAccountRoute
+type DeleteUserAccountRouteParams struct {
+
+	// HTTP Request Object
+	HTTPRequest *http.Request `json:"-"`
+
+	/*
+	  In: body
+	*/
+	Payload *types.DeleteUserAccountPayload
+}
+
+// BindRequest both binds and validates a request, it assumes that complex things implement a Validatable(strfmt.Registry) error interface
+// for simple values it will use straight method calls.
+//
+// To ensure default values, the struct must have been initialized with NewDeleteUserAccountRouteParams() beforehand.
+func (o *DeleteUserAccountRouteParams) BindRequest(r *http.Request, route *middleware.MatchedRoute) error {
+	var res []error
+
+	o.HTTPRequest = r
+
+	if runtime.HasBody(r) {
+		defer r.Body.Close()
+		var body types.DeleteUserAccountPayload
+		if err := route.Consumer.Consume(r.Body, &body); err != nil {
+			res = append(res, errors.NewParseError("payload", "body", "", err))
+		} else {
+			// validate body object
+			if err := body.Validate(route.Formats); err != nil {
+				res = append(res, err)
+			}
+
+			if len(res) == 0 {
+				o.Payload = &body
+			}
+		}
+	}
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (o *DeleteUserAccountRouteParams) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	// Payload
+	// Required: false
+
+	// body is validated in endpoint
+	//if err := o.Payload.Validate(formats); err != nil {
+	//  res = append(res, err)
+	//}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
